--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,7 +47,10 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\scripts\DragHandler.cs" />
+     <Compile Include="Assets\scripts\Processor.cs" />
+     <Compile Include="Assets\scripts\ProcessorPool.cs" />
      <Compile Include="Assets\scripts\Slot.cs" />
+     <Compile Include="Assets\scripts\Task.cs" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
