--- a/SOFTENG751.csproj
+++ b/SOFTENG751.csproj
@@ -81,6 +81,7 @@
     <Compile Include="Assets\scripts\DragHandler.cs" />
     <Compile Include="Assets\scripts\Processor.cs" />
     <Compile Include="Assets\scripts\ProcessorPool.cs" />
+    <Compile Include="Assets\scripts\ScrollSnapRect.cs" />
     <Compile Include="Assets\scripts\Slot.cs" />
     <Compile Include="Assets\scripts\Task.cs" />
   </ItemGroup>
