--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -53,8 +53,7 @@
      <Compile Include="Assets\scripts\Task.cs" />
      <Compile Include="Assets\scripts\TaskPool.cs" />
      <Compile Include="Assets\scripts\TileMapGenerator.cs" />
-     <None Include="Assets\resources\taskPack1.txt" />
-     <None Include="Assets\resources\git command.txt" />
+     <None Include="Assets\resources\nodes.txt" />
  <Reference Include="UnityEngine.UI">
  <HintPath>C:/Program Files/Unity/Editor/Data/UnityExtensions/Unity/GUISystem/UnityEngine.UI.dll</HintPath>
  </Reference>
