--- a/SOFTENG751.csproj
+++ b/SOFTENG751.csproj
@@ -84,11 +84,11 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Assets\scripts\ChangeToCredit.cs" />
-    <Compile Include="Assets\scripts\ChangeToIndex.cs" />
     <Compile Include="Assets\scripts\CreditToMenu.cs" />
     <Compile Include="Assets\scripts\DragHandler.cs" />
     <Compile Include="Assets\scripts\IndexToMenu.cs" />
+    <Compile Include="Assets\scripts\MenuToCredit.cs" />
+    <Compile Include="Assets\scripts\MenuToIndex.cs" />
     <Compile Include="Assets\scripts\Processor.cs" />
     <Compile Include="Assets\scripts\ProcessorPool.cs" />
     <Compile Include="Assets\scripts\Slot.cs" />
