--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -47,6 +47,7 @@
   </ItemGroup>
   <ItemGroup>
      <Compile Include="Assets\scripts\DragHandler.cs" />
+     <Compile Include="Assets\scripts\FlowLayoutGroup.cs" />
      <Compile Include="Assets\scripts\Processor.cs" />
      <Compile Include="Assets\scripts\ProcessorPool.cs" />
      <Compile Include="Assets\scripts\Slot.cs" />
