--- a/SOFTENG751.csproj
+++ b/SOFTENG751.csproj
@@ -84,6 +84,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\scripts\BtnSkin.cs" />
     <Compile Include="Assets\scripts\CreditToMenu.cs" />
     <Compile Include="Assets\scripts\DragHandler.cs" />
     <Compile Include="Assets\scripts\IndexToMenu.cs" />
