--- a/SOFTENG751.csproj
+++ b/SOFTENG751.csproj
@@ -120,11 +120,11 @@
     <Compile Include="Assets\MaterialUI\Scripts\Toaster.cs" />
     <Compile Include="Assets\MaterialUI\Scripts\ToggleConfig.cs" />
     <Compile Include="Assets\MaterialUI\Scripts\ToggleTextChanger.cs" />
-    <Compile Include="Assets\scenes\GameManager.cs" />
-    <Compile Include="Assets\scenes\Question.cs" />
     <Compile Include="Assets\scripts\DragHandler.cs" />
+    <Compile Include="Assets\scripts\GameManager.cs" />
     <Compile Include="Assets\scripts\Processor.cs" />
     <Compile Include="Assets\scripts\ProcessorPool.cs" />
+    <Compile Include="Assets\scripts\Question.cs" />
     <Compile Include="Assets\scripts\ScrollSnapRect.cs" />
     <Compile Include="Assets\scripts\Slot.cs" />
     <Compile Include="Assets\scripts\Task.cs" />
