--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -93,17 +93,19 @@
      <Compile Include="Assets\scripts\FlowLayoutGroup.cs" />
      <Compile Include="Assets\scripts\GameManager.cs" />
      <Compile Include="Assets\scripts\IndexToMenu.cs" />
+     <Compile Include="Assets\scripts\LoadAnswer.cs" />
      <Compile Include="Assets\scripts\LoadScene.cs" />
      <Compile Include="Assets\scripts\MenuToCredit.cs" />
      <Compile Include="Assets\scripts\MenuToIndex.cs" />
      <Compile Include="Assets\scripts\Processor.cs" />
      <Compile Include="Assets\scripts\ProcessorPool.cs" />
      <Compile Include="Assets\scripts\Question.cs" />
+     <Compile Include="Assets\scripts\ResourceManage.cs" />
      <Compile Include="Assets\scripts\ScrollSnapRect.cs" />
      <Compile Include="Assets\scripts\Slot.cs" />
      <Compile Include="Assets\scripts\Task.cs" />
      <Compile Include="Assets\scripts\TaskPool.cs" />
-     <None Include="Assets\resources\nodes.txt" />
+     <None Include="Assets\resources\game\nodes.txt" />
      <None Include="Assets\MaterialUI\Fonts\NOTICE.txt" />
  <Reference Include="Facebook.Unity.Settings">
  <HintPath>C:/Users/jeffm/SOFTENG751/Library/FacebookSDK/Facebook.Unity.Settings.dll</HintPath>
