--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -98,6 +98,7 @@
      <Compile Include="Assets\scripts\ResourceManage.cs" />
      <Compile Include="Assets\scripts\ScrollSnapRect.cs" />
      <Compile Include="Assets\scripts\Slot.cs" />
+     <Compile Include="Assets\scripts\SubmitAnswer.cs" />
      <Compile Include="Assets\scripts\Task.cs" />
      <Compile Include="Assets\scripts\TaskPool.cs" />
      <None Include="Assets\resources\game\nodes.txt" />
