--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -97,6 +97,7 @@
      <Compile Include="Assets\scripts\ProcessorPool.cs" />
      <Compile Include="Assets\scripts\ResourceManage.cs" />
      <Compile Include="Assets\scripts\ScrollSnapRect.cs" />
+     <Compile Include="Assets\scripts\SlideLoader.cs" />
      <Compile Include="Assets\scripts\Slot.cs" />
      <Compile Include="Assets\scripts\SubmitAnswer.cs" />
      <Compile Include="Assets\scripts\Task.cs" />
