--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -96,6 +96,7 @@
      <Compile Include="Assets\scripts\Game\SubmitAnswer.cs" />
      <Compile Include="Assets\scripts\Game\Task.cs" />
      <Compile Include="Assets\scripts\Game\TaskPool.cs" />
+     <Compile Include="Assets\scripts\Lecture\InitPageSection.cs" />
      <Compile Include="Assets\scripts\Lecture\ScrollSnapRect.cs" />
      <Compile Include="Assets\scripts\Lecture\SlideLoader.cs" />
      <Compile Include="Assets\scripts\Lecture\TheroyLoader.cs" />
